--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2.7"
 django-bootstrap5 = "^2.1.2"
 python-decouple = "^3.4"
 psycopg2 = "^2.9.1"
+rules = "^3.0"
 
 [tool.poetry.dev-dependencies]
 
