--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-bootstrap5 = "^2.1.2"
 python-decouple = "^3.4"
 psycopg2 = "^2.9.1"
 rules = "^3.0"
+djangorestframework = "^3.12.4"
 
 [tool.poetry.dev-dependencies]
 
