--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python-decouple = "^3.4"
 psycopg2 = "^2.9.1"
 rules = "^3.0"
 djangorestframework = "^3.12.4"
+django-crispy-forms = "^1.13.0"
+django-filter = "^21.1"
 
 [tool.poetry.dev-dependencies]
 
