--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ rules = "^3.0"
 djangorestframework = "^3.12.4"
 django-crispy-forms = "^1.13.0"
 django-filter = "^21.1"
+django-debug-toolbar = "^3.2.2"
 
 [tool.poetry.dev-dependencies]
 
