--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,12 @@ djangorestframework = "^3.12.4"
 django-crispy-forms = "^1.13.0"
 django-filter = "^21.1"
 django-debug-toolbar = "^3.2.2"
+isort = "^5.10.1"
 
 [tool.poetry.dev-dependencies]
+
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
