add lib for django qr code generating;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-crispy-forms = "^1.13.0"
 django-filter = "^21.1"
 django-debug-toolbar = "^3.2.2"
 isort = "^5.10.1"
+django-qr-code = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
